add page to view compounds 3d models

--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "postinstall": "flowbite-react patch"
   },
   "dependencies": {
+    "3dmol": "^2.4.2",
     "flowbite-react": "^0.11.0",
     "framer-motion": "^12.6.5",
     "lucide-react": "^0.488.0",
